--- a/cxhash.html
+++ b/cxhash.html
@@ -18,7 +18,7 @@
 
 <!-- CSS -->
 <title>cxhash</title>
-<link rel="stylesheet" type="text/css" href="nimdoc.css">
+<link rel="stylesheet" type="text/css" href="nimdoc.out.css">
 
 <script type="text/javascript" src="dochack.js"></script>
 
@@ -132,6 +132,10 @@ function main() {
 <p>checkHash</p>
 <p>checks hash of a string and print status </p>
 
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxhash.nim#L29"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxhash.nim#L29" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="verifyHash,string,T"></a>
@@ -141,6 +145,10 @@ function main() {
 <p>verifyHash</p>
 <p>checks hash of a string and returns true or false </p>
 
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxhash.nim#L40"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxhash.nim#L40" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="createHash,string"></a>
@@ -155,6 +163,10 @@ function main() {
 <span class="Keyword">var</span> <span class="Identifier">ahash</span> <span class="Operator">=</span> <span class="Identifier">createHash</span><span class="Punctuation">(</span><span class="Identifier">zz</span><span class="Punctuation">)</span>
 <span class="Identifier">echo</span> <span class="Identifier">ahash</span>
 <span class="Identifier">checkHash</span><span class="Punctuation">(</span><span class="Identifier">zz</span><span class="Punctuation">,</span> <span class="Identifier">ahash</span><span class="Punctuation">)</span></pre>
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxhash.nim#L49"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxhash.nim#L49" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="getGitHash"></a>
@@ -162,6 +174,10 @@ function main() {
 <dd>
 
 getGitHash to get the git hash during compile 
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxhash.nim#L67"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxhash.nim#L67" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 
@@ -174,7 +190,7 @@ getGitHash to get the git hash during compile
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2019-12-23 03:45:04 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-02-29 21:36:46 UTC</small>
       </div>
     </div>
   </div>
