--- a/cxstats.html
+++ b/cxstats.html
@@ -18,7 +18,7 @@
 
 <!-- CSS -->
 <title>cxstats</title>
-<link rel="stylesheet" type="text/css" href="nimdoc.css">
+<link rel="stylesheet" type="text/css" href="nimdoc.out.css">
 
 <script type="text/javascript" src="dochack.js"></script>
 
@@ -185,6 +185,10 @@ Description : provides some functions pertaining to statistcs and calculations</
 
 <span class="Identifier">curdn</span><span class="Punctuation">(</span><span class="DecNumber">6</span><span class="Punctuation">)</span>
 <span class="Identifier">doFinish</span><span class="Punctuation">(</span><span class="Punctuation">)</span></pre>
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxstats.nim#L51"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxstats.nim#L51" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="showRegression,seq[T][],seq[T][],int,int"></a>
@@ -197,6 +201,10 @@ Description : provides some functions pertaining to statistcs and calculations</
 <span class="Keyword">var</span> <span class="Identifier">a</span> <span class="Operator">=</span> <span class="Operator">@</span><span class="Punctuation">[</span><span class="DecNumber">1</span><span class="Punctuation">,</span><span class="DecNumber">2</span><span class="Punctuation">,</span><span class="DecNumber">3</span><span class="Punctuation">,</span><span class="DecNumber">4</span><span class="Punctuation">,</span><span class="DecNumber">5</span><span class="Punctuation">]</span>
 <span class="Keyword">var</span> <span class="Identifier">b</span> <span class="Operator">=</span> <span class="Operator">@</span><span class="Punctuation">[</span><span class="DecNumber">1</span><span class="Punctuation">,</span><span class="DecNumber">2</span><span class="Punctuation">,</span><span class="DecNumber">3</span><span class="Punctuation">,</span><span class="DecNumber">4</span><span class="Punctuation">,</span><span class="DecNumber">7</span><span class="Punctuation">]</span>
 <span class="Identifier">showRegression</span><span class="Punctuation">(</span><span class="Identifier">a</span><span class="Punctuation">,</span><span class="Identifier">b</span><span class="Punctuation">)</span></pre>
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxstats.nim#L99"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxstats.nim#L99" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="showRegression,RunningRegress,int,int"></a>
@@ -207,6 +215,10 @@ Description : provides some functions pertaining to statistcs and calculations</
 <p>showRegression</p>
 <p>Displays RunningRegress data from an already formed RunningRegress </p>
 
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxstats.nim#L119"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxstats.nim#L119" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="zscore,seq[T][SomeNumber]"></a>
@@ -228,6 +240,10 @@ Description : provides some functions pertaining to statistcs and calculations</
 <span class="Identifier">printLn</span><span class="Punctuation">(</span><span class="StringLit">&quot;ZSCORE&quot;</span><span class="Punctuation">,</span><span class="Identifier">salmon</span><span class="Punctuation">,</span><span class="Identifier">xpos</span><span class="Operator">=</span><span class="DecNumber">2</span><span class="Punctuation">)</span>
 <span class="Identifier">showSeq</span><span class="Punctuation">(</span><span class="Identifier">zscore</span><span class="Punctuation">(</span><span class="Identifier">data2</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">maxitemwidth</span><span class="Operator">=</span><span class="DecNumber">8</span><span class="Punctuation">)</span>
 <span class="Identifier">doFinish</span><span class="Punctuation">(</span><span class="Punctuation">)</span> </pre>
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxstats.nim#L130"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxstats.nim#L130" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="rolling_zscore,seq[T][float],seq[T][float],float"></a>
@@ -236,6 +252,10 @@ Description : provides some functions pertaining to statistcs and calculations</
 <dd>
 
 
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxstats.nim#L184"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxstats.nim#L184" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="median,seq[T][float]"></a>
@@ -243,6 +263,10 @@ Description : provides some functions pertaining to statistcs and calculations</
 <dd>
 
 
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxstats.nim#L274"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxstats.nim#L274" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 
@@ -255,7 +279,7 @@ Description : provides some functions pertaining to statistcs and calculations</
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2019-12-23 03:45:07 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-02-29 21:36:49 UTC</small>
       </div>
     </div>
   </div>
