--- a/cxnetwork.html
+++ b/cxnetwork.html
@@ -18,7 +18,7 @@
 
 <!-- CSS -->
 <title>cxnetwork</title>
-<link rel="stylesheet" type="text/css" href="nimdoc.css">
+<link rel="stylesheet" type="text/css" href="nimdoc.out.css">
 
 <script type="text/javascript" src="dochack.js"></script>
 
@@ -182,6 +182,10 @@ function main() {
    <span class="Identifier">echo</span> <span class="Identifier">x</span>
 <span class="Identifier">echo</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
 <span class="Identifier">echo</span> <span class="Identifier">jj</span><span class="Punctuation">[</span><span class="StringLit">&quot;city&quot;</span><span class="Punctuation">]</span><span class="Operator">.</span><span class="Identifier">getstr</span></pre>
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxnetwork.nim#L53"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxnetwork.nim#L53" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="getWanIp"></a>
@@ -191,6 +195,10 @@ function main() {
 <p>getWanIP</p>
 <p>get your wanip from api.ipify.org </p>
 
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxnetwork.nim#L80"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxnetwork.nim#L80" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="showIpInfo,string"></a>
@@ -203,6 +211,10 @@ function main() {
 <p>Example:</p>
 <pre class="listing"><span class="Identifier">showIpInfo</span><span class="Punctuation">(</span><span class="StringLit">&quot;208.80.152.201&quot;</span><span class="Punctuation">)</span>
 <span class="Identifier">showIpInfo</span><span class="Punctuation">(</span><span class="Identifier">getHosts</span><span class="Punctuation">(</span><span class="StringLit">&quot;bbc.com&quot;</span><span class="Punctuation">)</span><span class="Punctuation">[</span><span class="DecNumber">0</span><span class="Punctuation">]</span><span class="Punctuation">)</span></pre>
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxnetwork.nim#L92"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxnetwork.nim#L92" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="localIp"></a>
@@ -211,6 +223,10 @@ function main() {
 <dd>
 
 
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxnetwork.nim#L114"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxnetwork.nim#L114" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="localRouterIp"></a>
@@ -219,6 +235,10 @@ function main() {
 <dd>
 
 
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxnetwork.nim#L121"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxnetwork.nim#L121" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="showLocalIpInfo"></a>
@@ -227,6 +247,10 @@ function main() {
 <dd>
 
 
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxnetwork.nim#L129"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxnetwork.nim#L129" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="showWanIpInfo"></a>
@@ -235,6 +259,10 @@ function main() {
 <dd>
 
 
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxnetwork.nim#L133"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxnetwork.nim#L133" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="pingy,string,int,string"></a>
@@ -248,6 +276,10 @@ function main() {
 <pre class="listing"><span class="Identifier">pingy</span><span class="Punctuation">(</span><span class="StringLit">&quot;yahoo.com&quot;</span><span class="Punctuation">,</span><span class="DecNumber">4</span><span class="Punctuation">,</span><span class="Identifier">dodgerblue</span><span class="Punctuation">)</span>   <span class="Comment"># 4 pings and display progress in some color</span>
 <span class="Identifier">pingy</span><span class="Punctuation">(</span><span class="StringLit">&quot;google.com&quot;</span><span class="Punctuation">,</span><span class="DecNumber">8</span><span class="Punctuation">,</span><span class="Identifier">aqua</span><span class="Punctuation">)</span>
 <span class="Identifier">pingy</span><span class="Punctuation">(</span><span class="StringLit">&quot;ping.sunet.se&quot;</span><span class="Punctuation">,</span><span class="DecNumber">4</span><span class="Punctuation">,</span><span class="Identifier">lime</span><span class="Punctuation">)</span></pre>
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxnetwork.nim#L137"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxnetwork.nim#L137" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="cxPortCheck,string"></a>
@@ -262,6 +294,10 @@ function main() {
 <p>This runs a linux system command to see what the ports are listening to</p>
 <p>if no or partial output at all run your program with sudo </p>
 
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxnetwork.nim#L161"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxnetwork.nim#L161" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="cxDig,string"></a>
@@ -274,6 +310,10 @@ function main() {
 <p>may or may not return expected data</p>
 <p>see showDig() for display </p>
 
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxnetwork.nim#L244"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxnetwork.nim#L244" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="cxDns,string"></a>
@@ -283,6 +323,10 @@ function main() {
 <p>cxDns</p>
 <p>also see showHosts() </p>
 
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxnetwork.nim#L259"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxnetwork.nim#L259" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="showDig,string"></a>
@@ -294,6 +338,10 @@ function main() {
 <p>showDig</p>
 <p>reverse dns lookup , default a google ip</p>
 
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxnetwork.nim#L268"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxnetwork.nim#L268" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="showDns,string"></a>
@@ -306,6 +354,10 @@ function main() {
 <p>ip and connected hosts look up for a domain name</p>
 <p>default = google.com</p>
 <pre class="listing"><span class="Identifier">showDns</span><span class="Punctuation">(</span><span class="StringLit">&quot;bbc.com&quot;</span><span class="Punctuation">)</span></pre>
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxnetwork.nim#L289"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxnetwork.nim#L289" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="getHosts,string"></a>
@@ -320,6 +372,10 @@ function main() {
 <span class="Keyword">for</span> <span class="Identifier">x</span> <span class="Keyword">in</span> <span class="Identifier">z</span><span class="Punctuation">:</span>
   <span class="Identifier">echo</span> <span class="Identifier">x</span>
 <span class="Identifier">doFinish</span><span class="Punctuation">(</span><span class="Punctuation">)</span></pre>
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxnetwork.nim#L314"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxnetwork.nim#L314" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="showHosts,string"></a>
@@ -333,6 +389,10 @@ function main() {
 <pre class="listing"><span class="Keyword">import</span> <span class="Identifier">nimcx</span>
 <span class="Identifier">showHosts</span><span class="Punctuation">(</span><span class="StringLit">&quot;bbc.co.uk&quot;</span><span class="Punctuation">)</span>
 <span class="Identifier">doFinish</span><span class="Punctuation">(</span><span class="Punctuation">)</span></pre>
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxnetwork.nim#L359"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxnetwork.nim#L359" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="wifistatus"></a>
@@ -341,6 +401,10 @@ function main() {
 <dd>
 
 
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxnetwork.nim#L381"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxnetwork.nim#L381" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 
@@ -355,6 +419,10 @@ function main() {
 <p>parseIps for ipv4 addresses only</p>
 <p>ex nim documentation strscans module </p>
 
+&nbsp;&nbsp;<a
+href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxnetwork.nim#L29"
+class="link-seesrc" target="_blank">Source</a>
+<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxnetwork.nim#L29" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 
@@ -367,7 +435,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2019-12-23 03:45:01 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-02-29 21:36:43 UTC</small>
       </div>
     </div>
   </div>
