--- a/cxhash.html
+++ b/cxhash.html
@@ -118,9 +118,25 @@ function main() {
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"><p>cxhashes.nim</p>
-<p>convenience functions for hashes</p>
-<p>Last 2019-12-06 </p>
+  <p class="module-desc"><pre>
+Library     : nimcx.nim
+
+Module      : cxhashes.nim
+
+Status      : stable
+
+License     : MIT opensource
+
+Latest      : 2020-05-14
+
+Compiler    : latest stable or devel branch
+
+OS          : Linux
+
+Note        : for more on hashes see
+              https://github.com/c-blake/adix/blob/master/althash.nim
+
+Description : provides convenience functions for hashes</pre>
 </p>
   <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
@@ -132,10 +148,6 @@ function main() {
 <p>checkHash</p>
 <p>checks hash of a string and print status </p>
 
-&nbsp;&nbsp;<a
-href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxhash.nim#L29"
-class="link-seesrc" target="_blank">Source</a>
-<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxhash.nim#L29" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="verifyHash,string,T"></a>
@@ -145,10 +157,6 @@ class="link-seesrc" target="_blank">Source</a>
 <p>verifyHash</p>
 <p>checks hash of a string and returns true or false </p>
 
-&nbsp;&nbsp;<a
-href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxhash.nim#L40"
-class="link-seesrc" target="_blank">Source</a>
-<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxhash.nim#L40" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="createHash,string"></a>
@@ -163,10 +171,6 @@ class="link-seesrc" target="_blank">Source</a>
 <span class="Keyword">var</span> <span class="Identifier">ahash</span> <span class="Operator">=</span> <span class="Identifier">createHash</span><span class="Punctuation">(</span><span class="Identifier">zz</span><span class="Punctuation">)</span>
 <span class="Identifier">echo</span> <span class="Identifier">ahash</span>
 <span class="Identifier">checkHash</span><span class="Punctuation">(</span><span class="Identifier">zz</span><span class="Punctuation">,</span> <span class="Identifier">ahash</span><span class="Punctuation">)</span></pre>
-&nbsp;&nbsp;<a
-href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxhash.nim#L49"
-class="link-seesrc" target="_blank">Source</a>
-<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxhash.nim#L49" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="getGitHash"></a>
@@ -174,10 +178,6 @@ class="link-seesrc" target="_blank">Source</a>
 <dd>
 
 getGitHash to get the git hash during compile 
-&nbsp;&nbsp;<a
-href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxhash.nim#L67"
-class="link-seesrc" target="_blank">Source</a>
-<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxhash.nim#L67" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 
@@ -190,7 +190,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-02-29 21:36:46 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-19 09:50:11 UTC</small>
       </div>
     </div>
   </div>
