--- a/cxstats.html
+++ b/cxstats.html
@@ -108,15 +108,15 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#showStats%2CRunningStat%2Cint%2Cint"
     title="showStats(x: RunningStat; n: int = 3; xpos: int = 1)"><wbr />show<wbr />Stats<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#showRegression%2Cseq%5BT%5D%5B%5D%2Cseq%5BT%5D%5B%5D%2Cint%2Cint"
+  <li><a class="reference" href="#showRegression%2Cseq%5B%5D%2Cseq%5B%5D%2Cint%2Cint"
     title="showRegression(x, y: seq[float | int]; n: int = 5; xpos: int = 1)"><wbr />show<wbr />Regression<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#showRegression%2CRunningRegress%2Cint%2Cint"
     title="showRegression(rr: RunningRegress; n: int = 5; xpos: int = 1)"><wbr />show<wbr />Regression<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#zscore%2Cseq%5BT%5D%5BSomeNumber%5D"
+  <li><a class="reference" href="#zscore%2Cseq%5BSomeNumber%5D"
     title="zscore(data: seq[SomeNumber]): seq[float]"><wbr />zscore<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#rolling_zscore%2Cseq%5BT%5D%5Bfloat%5D%2Cseq%5BT%5D%5Bfloat%5D%2Cfloat"
+  <li><a class="reference" href="#rolling_zscore%2Cseq%5Bfloat%5D%2Cseq%5Bfloat%5D%2Cfloat"
     title="rolling_zscore(data: seq[float]; observed_window: seq[float]; decay: float = 0.9): float"><wbr />rolling_<wbr />zscore<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#median%2Cseq%5BT%5D%5Bfloat%5D"
+  <li><a class="reference" href="#median%2Cseq%5Bfloat%5D"
     title="median(xs: seq[float]): float"><wbr />median<span class="attachedType"></span></a></li>
 
   </ul>
@@ -137,13 +137,13 @@ Status      : stable
 
 License     : MIT opensource
 
-Latest      : 2019-12-06
+Latest      : 2020-04-24
 
-Compiler    : Nim &gt;= 1.0.4 or 1.1.1 devel branch
+Compiler    : latest stable or devel branch
 
 OS          : Linux
 
-Description : provides some functions pertaining to statistcs and calculations</pre>
+Description : provides functions pertaining to statistcs and calculations</pre>
 </p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
@@ -185,14 +185,10 @@ Description : provides some functions pertaining to statistcs and calculations</
 
 <span class="Identifier">curdn</span><span class="Punctuation">(</span><span class="DecNumber">6</span><span class="Punctuation">)</span>
 <span class="Identifier">doFinish</span><span class="Punctuation">(</span><span class="Punctuation">)</span></pre>
-&nbsp;&nbsp;<a
-href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxstats.nim#L51"
-class="link-seesrc" target="_blank">Source</a>
-<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxstats.nim#L51" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
-<a id="showRegression,seq[T][],seq[T][],int,int"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#showRegression%2Cseq%5BT%5D%5B%5D%2Cseq%5BT%5D%5B%5D%2Cint%2Cint"><span class="Identifier">showRegression</span></a><span class="Other">(</span><span class="Identifier">x</span><span class="Other">,</span> <span class="Identifier">y</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span> <span class="Operator">|</span> <span class="Identifier">int</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">5</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span></pre></dt>
+<a id="showRegression,seq[],seq[],int,int"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#showRegression%2Cseq%5B%5D%2Cseq%5B%5D%2Cint%2Cint"><span class="Identifier">showRegression</span></a><span class="Other">(</span><span class="Identifier">x</span><span class="Other">,</span> <span class="Identifier">y</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span> <span class="Operator">|</span> <span class="Identifier">int</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">5</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span></pre></dt>
 <dd>
 
 <p>showRegression</p>
@@ -201,10 +197,6 @@ class="link-seesrc" target="_blank">Source</a>
 <span class="Keyword">var</span> <span class="Identifier">a</span> <span class="Operator">=</span> <span class="Operator">@</span><span class="Punctuation">[</span><span class="DecNumber">1</span><span class="Punctuation">,</span><span class="DecNumber">2</span><span class="Punctuation">,</span><span class="DecNumber">3</span><span class="Punctuation">,</span><span class="DecNumber">4</span><span class="Punctuation">,</span><span class="DecNumber">5</span><span class="Punctuation">]</span>
 <span class="Keyword">var</span> <span class="Identifier">b</span> <span class="Operator">=</span> <span class="Operator">@</span><span class="Punctuation">[</span><span class="DecNumber">1</span><span class="Punctuation">,</span><span class="DecNumber">2</span><span class="Punctuation">,</span><span class="DecNumber">3</span><span class="Punctuation">,</span><span class="DecNumber">4</span><span class="Punctuation">,</span><span class="DecNumber">7</span><span class="Punctuation">]</span>
 <span class="Identifier">showRegression</span><span class="Punctuation">(</span><span class="Identifier">a</span><span class="Punctuation">,</span><span class="Identifier">b</span><span class="Punctuation">)</span></pre>
-&nbsp;&nbsp;<a
-href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxstats.nim#L99"
-class="link-seesrc" target="_blank">Source</a>
-<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxstats.nim#L99" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <a id="showRegression,RunningRegress,int,int"></a>
@@ -215,14 +207,10 @@ class="link-seesrc" target="_blank">Source</a>
 <p>showRegression</p>
 <p>Displays RunningRegress data from an already formed RunningRegress </p>
 
-&nbsp;&nbsp;<a
-href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxstats.nim#L119"
-class="link-seesrc" target="_blank">Source</a>
-<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxstats.nim#L119" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
-<a id="zscore,seq[T][SomeNumber]"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#zscore%2Cseq%5BT%5D%5BSomeNumber%5D"><span class="Identifier">zscore</span></a><span class="Other">(</span><span class="Identifier">data</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">SomeNumber</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="zscore,seq[SomeNumber]"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#zscore%2Cseq%5BSomeNumber%5D"><span class="Identifier">zscore</span></a><span class="Other">(</span><span class="Identifier">data</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">SomeNumber</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>zscore</p>
@@ -240,33 +228,21 @@ class="link-seesrc" target="_blank">Source</a>
 <span class="Identifier">printLn</span><span class="Punctuation">(</span><span class="StringLit">&quot;ZSCORE&quot;</span><span class="Punctuation">,</span><span class="Identifier">salmon</span><span class="Punctuation">,</span><span class="Identifier">xpos</span><span class="Operator">=</span><span class="DecNumber">2</span><span class="Punctuation">)</span>
 <span class="Identifier">showSeq</span><span class="Punctuation">(</span><span class="Identifier">zscore</span><span class="Punctuation">(</span><span class="Identifier">data2</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">maxitemwidth</span><span class="Operator">=</span><span class="DecNumber">8</span><span class="Punctuation">)</span>
 <span class="Identifier">doFinish</span><span class="Punctuation">(</span><span class="Punctuation">)</span> </pre>
-&nbsp;&nbsp;<a
-href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxstats.nim#L130"
-class="link-seesrc" target="_blank">Source</a>
-<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxstats.nim#L130" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
-<a id="rolling_zscore,seq[T][float],seq[T][float],float"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#rolling_zscore%2Cseq%5BT%5D%5Bfloat%5D%2Cseq%5BT%5D%5Bfloat%5D%2Cfloat"><span class="Identifier">rolling_zscore</span></a><span class="Other">(</span><span class="Identifier">data</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">observed_window</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">decay</span><span class="Other">:</span> <span class="Identifier">float</span> <span class="Other">=</span> <span class="FloatNumber">0.9</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">float</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
+<a id="rolling_zscore,seq[float],seq[float],float"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#rolling_zscore%2Cseq%5Bfloat%5D%2Cseq%5Bfloat%5D%2Cfloat"><span class="Identifier">rolling_zscore</span></a><span class="Other">(</span><span class="Identifier">data</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">observed_window</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">decay</span><span class="Other">:</span> <span class="Identifier">float</span> <span class="Other">=</span> <span class="FloatNumber">0.9</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">float</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
-&nbsp;&nbsp;<a
-href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxstats.nim#L184"
-class="link-seesrc" target="_blank">Source</a>
-<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxstats.nim#L184" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
-<a id="median,seq[T][float]"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#median%2Cseq%5BT%5D%5Bfloat%5D"><span class="Identifier">median</span></a><span class="Other">(</span><span class="Identifier">xs</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">float</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="median,seq[float]"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#median%2Cseq%5Bfloat%5D"><span class="Identifier">median</span></a><span class="Other">(</span><span class="Identifier">xs</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">float</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
-&nbsp;&nbsp;<a
-href="https://github.com/qqtop/NimCx/blob/master/tree/devel/nimcx/cxstats.nim#L274"
-class="link-seesrc" target="_blank">Source</a>
-<a href="https://github.com/qqtop/NimCx/blob/master/edit/devel/nimcx/cxstats.nim#L274" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 
@@ -279,7 +255,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-02-29 21:36:49 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-19 09:50:09 UTC</small>
       </div>
     </div>
   </div>
